# bandcalc

./: .gitignore  README.md  pyproject.toml  setup.py
bandcalc/: __init__.py
bandcalc/benchmarks/: potential_matrix.py
bandcalc/benchmarks/general/: mandelbrot.py
bandcalc/constants/: __init__.py  constants.py
bandcalc/core/: __init__.py  calc.py  generate.py  plot.py  tools.py
bandcalc/examples/: cubic.py  cubic2D.py  graphene.py  hexagonal.py  moire.py  monkhorst_pack.py
bandcalc/examples/bandstructure/: cubic.py  hexagonal.py  moire_hexagonal.py  quadratic.py
bandcalc/examples/hubbard/: bose_hubbard_phase_diagram.py  bose_hubbard_phase_transitions.py  chemical_potentials.py  hopping_fit.py  hopping_params.py  hubbard.conf  intrasite_params.py  pickle_wannier.py
bandcalc/examples/misc/: fit_hubbard_moire.py  fit_hubbard_moire_parameters_over_angle.py  hubbard_hopping_fit.py  wannier.py
bandcalc/examples/misc/wannier_pickle/: moire_vector_lengths.pickle  potential_minima.pickle  wannier_1.00_deg.pickle  wannier_1.22_deg.pickle  (+8 more)
bandcalc/examples/potential/: moire.py  moire_reciprocal.py
bandcalc/examples/wavefunction/: moire_hexagonal.py  wannier.py  wannier_all_bands.py
bandcalc/lattice/: __init__.py  calc.py  generate.py  plot.py
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: bandcalc.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  bandcalc.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/bandcalc/: calc.rst  generate.rst  index.rst  plot.rst  tools.rst
(+12 files in other folders)
