[tool.poetry]
name = "bandcalc"
version = "0.1.0"
description = "Calculate bandstructures for different lattices"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.8.8"
cupy-cuda112 = "^8.6.0"
matplotlib = "^3.3.4"
numba = "^0.53.0"
pyqtgraph = "^0.12.0"
PyOpenGL = "^3.1.5"
PySide2 = "^5.15.2"
Sphinx = "3.5.2"
furo = "^2021.3.20-beta.31"
numpy = "^1.20.2"
scipy = "^1.6.2"
ray = "^1.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
